--- a/docker-compose-inits.yml
+++ b/docker-compose-inits.yml
@@ -21,7 +21,7 @@ x-volumes:
 
 services:
   taiga-manage:
-    image: taigaio/taiga-back:latest
+    image: taigaio/taiga-back:6.2.1
     environment: *default-back-environment
     depends_on:
       - taiga-db
